--- a/style.css
+++ b/style.css
@@ -170,6 +170,8 @@ nav li a {
 }
 #carregarMais:hover{
     background: #272B30;
+    color:#A0C55F;
+    transition: color 0.6s;
 }
 
 /* ================================ */
