--- a/style.css
+++ b/style.css
@@ -1,293 +1,51 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
-/* TESTE TROJAO */
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
-    text-decoration: none;
-    font-family: 'Poppins', sans-serif;
 }
-/* Como a fonte padrao utilizada pelo navegador é de 16px, 62.5% equivale a 10px, calculo utilizado para facilitar a conversão de px para rem */
-:root {
-    font-size: 62.5%; /* 10px = 1rem */
-    --white-color:  hsl(0, 0%, 100%);
-    --blue-color: hsl(240, 100%, 7%);
-    --orange-color: hsl(32, 89%, 48%);
-}
+
 body {
-    background-image: url("img/imagem.jpeg");
-    background-size: cover;
-    background-attachment: fixed;
-    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
     min-height: 100vh;
-    width: 100%;
-}
-.sideBar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 24rem;
-    background-color: var(--blue-color);
-    padding: 0.6rem 1.4rem;
-    z-index: 10;
-}
-.sideBar .logoContent .logo {
-    color: var(--white-color);
-    display: flex;
-    height: 5rem;
-    width: 100%;
-    align-items: center;
-    gap: 2rem;
-    text-align: center;
-}
-.logoContent .logo .logoName {
-    font-size: 2rem;
-    text-transform: uppercase;
-}
-.sideBar ul {
-    margin-top: 2rem;
-}
-.sideBar ul li {
-    position: relative;
-    height: 5rem;
-    width: 100%;
-    margin: 0 .5rem;
-    list-style: none;
-    line-height: 5rem;
-}
-.sideBar ul li a {
-    color: var(--white-color);
-    display: flex;
-    align-items: center;
-    transition: all 0.4s ease;
-    border-radius: 1rem;
-}
-.sideBar ul li a:hover {
-    margin-right: 1rem;
-    transition: all 0.4s ease;
-    color: var(--white-color);
-    background-color: #808080;
-}
-.sideBar ul li a img {
-    height: 3.5rem;
-    min-width: 3.5rem;
-    border-radius: 0.5rem;
-    margin-right: 2rem;
-    text-align: center;
-}
-.sideBar .linksName {
-    opacity: 1;
-    pointer-events: auto;
-}
-.sideBar ul li a span {
-    font-size: 1.6rem;
-    font-weight: 500;
-}
-nav {
-    position: fixed;
-    display:flex;
-    width: 100%;
-    background-color: var(--blue-color);
-    flex-wrap: wrap;
-}
-nav ul {
-    display: flex;
-    align-items: center;
-    /*justify-content: center;*/
-    min-height: 50px;
-    list-style: none;
-    margin-left: 20%;
-    justify-content: space-between;
-    gap: 15%;
-}
-nav li a {
-    gap: 15%;
-    font-size: 15pt;
-    font-weight: 600;
-    color: white;
-    justify-content: space-between;
-}
-.navLink {
-    cursor: pointer;
-    transition: 0.7s;
-}
-.navLink:hover {
-    color: #A0C55F;
-}
-#scroller {
-    width: 48px;
-    height: 48px;
-    background-color: grey;
-    border: 5px solid grey;
-    border-radius: 50%;
-    position: fixed;
-    bottom: 50px;
-    right: 50px;
-    cursor: pointer;
-    display: none;
-    transition: 0.7s;
-    background-image: url("img/scrollBtn.svg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    z-index: 1;
-}
-#scroller:hover {
-    background-color: #A0C55F;
-    border: 5px solid #A0C55F;
-}
-.homeContent {
-    position: absolute;
-    min-height: 100%;
-    width: calc(100% - 7.8rem);
-    left: 7.8rem;
-    display: flex;
-    flex-wrap: wrap;
-}
-.sideBar ~ .homeContent {
-    width: calc(100% - 24rem);
-    left: 20rem;
-}
-#carregarMais {
-    position: fixed;
-    font-size: 1.8rem;
-    font-weight: 700;
-    color: white;
-    width: 100%;
-    max-width: 339px;
-    height: 70px;
-    background: black;
-    border-radius: 12px;
-    border: none;
-    /*margin-top: 68rem;
-    margin-left: 45rem;*/
-    text-transform: uppercase;
-    z-index: 10;
-    top: 90%;
-    left: 55%;
-    transform: translate(-50%,-50%);
-    cursor: pointer;
-}
-#carregarMais:hover{
-    background: #272B30;
 }
 
-/* ================================ */
+.banner {
+    width: 901px;
+    height: 346px;
 
-.gallery {
-
-    width: 70%;
-    display: grid;
-    align-items: center;
-    justify-content: center;
-    padding: 1rem 0;
-    margin:  auto;
-    //flex-direction: row;
-    //flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 0;
-    grid-template-columns: repeat(auto-fit,minmax(270px, 2fr));
-    //grid-auto-rows: 450px;
-    gap: 4rem;
-  }
-@media (max-width: 1250px) {
-
+    background: #C4C4C4;
+    border-radius: 30px;
 }
-.galleryCard {
-    background-position: center;
-    background-repeat: no-repeat;
-    //width: 31%;
-    max-width: 350px;
-    height: 300px;
-    margin-top: 35%;
-    //margin-bottom: 2%;
-    //padding: 3%;
+
+.carrossel {
+    display: inline-flex;
+    box-shadow: 2px 2px 4px #000000;
+    overflow: hidden;
+    width: 901px;
+    height: 346px;
+    border-radius: 30px;
+}
+
+.container {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    justify-content: space-between;
-    border-radius: 3px;
-    background-color: #e1e1e1;
-    row-gap: 3rem;
-  }
-@media (max-width: 760px){
-    .sideBar ~ .homeContent {
-        //width: calc(100% - 15rem);
-        left: 25%;
-    }
+    transition: transform 0.5s ease-in-out;
+    transform: translateX(0);
 }
-@media (max-width: 940px){
-    .sideBar h1{
-        display: none;
-    }
-    .sideBar{
-        height: 100%;
-        width: 21%;
-        left: 0;
-    }
-    .sideBar span{
-        display: none;
-    }
-    #carregarMais{
-        width: 40%;
-    }
-    .homeContent{
-        width: 100%;
-        left: 0;
-    }
-}
-  .galleryCardTitle {
-    font-size: 2rem;
-    font-weight: 600;
-    margin-bottom: 1rem;
-    text-shadow: 5px 5px 10px black;
-    cursor: default;
-    text-align: center;
-  }
-  
-  .galleryCard:hover {
-      width: 110%;
-    max-width: 400px;
-    transition:width 3s;
-    background-size: 90%;
-    color: #FFFFFF;
-    text-shadow: 5px 5px 10px black;
-    background-color: #272B30;
 
-  }
-  
-  .galleryCardBtn:hover {
-    color: #A0C55F;
-    text-shadow: none;
-  }
+img {
+    width: 901px;
+    height: 346px;
+}
 
-  .galleryCardBtn {
-    padding: 0.6rem 1rem;
-    border: none;
-    color: cadetblue;
-      margin: -15px;
-    font-size: 3rem;
-    text-transform: uppercase;
-    transition: background-color 1s;
-    transition: color 0.6s;
-    cursor: pointer;
-    text-shadow: none;
-  }
-.footer {
-    width: 100%;
-    position: fixed;
-    top: 98.5%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    color: #FFF;
-    background-color: #272B30;
+/* .botao-direito {
+    background-color: transparent;
+    border: 0;
+    transform: translateY(-50%);
 }
-.footer p {
-    margin: 1em;
-    margin-left: 10%;
-}
+
+.botao-esquerdo {
+    background-color: transparent;
+    border: 0;
+    transform: translateY(-50%);
+} */
