--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
 
 body {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: right;
+    justify-content: right;
     margin: 0;
     min-height: 100vh;
 }
@@ -13,18 +13,17 @@ body {
 .banner {
     width: 901px;
     height: 346px;
-
     background: #C4C4C4;
     border-radius: 30px;
 }
 
 .carrossel {
     display: inline-flex;
-    box-shadow: 2px 2px 4px #000000;
+    box-shadow: 2px 4px 2px #d06de9;
     overflow: hidden;
     width: 901px;
     height: 346px;
-    border-radius: 30px;
+    border-radius: 10px;
 }
 
 .container {
@@ -37,15 +36,3 @@ img {
     width: 901px;
     height: 346px;
 }
-
-/* .botao-direito {
-    background-color: transparent;
-    border: 0;
-    transform: translateY(-50%);
-}
-
-.botao-esquerdo {
-    background-color: transparent;
-    border: 0;
-    transform: translateY(-50%);
-} */
