--- a/style.css
+++ b/style.css
@@ -3,36 +3,54 @@
 }
 
 body {
-    display: flex;
-    align-items: right;
-    justify-content: right;
     margin: 0;
-    min-height: 100vh;
+    transition: background 0.4s ease-in-out;
 }
 
-.banner {
-    width: 901px;
-    height: 346px;
-    background: #C4C4C4;
+.carrossel-container {
+    overflow: hidden;
+    position: relative;
+    width: 50vw;
+    height: 80vh;
+    margin-top: 1rem;
     border-radius: 30px;
 }
 
 .carrossel {
-    display: inline-flex;
-    box-shadow: 2px 4px 2px #d06de9;
-    overflow: hidden;
-    width: 901px;
-    height: 346px;
-    border-radius: 10px;
-}
-
-.container {
     display: flex;
-    transition: transform 0.5s ease-in-out;
+    position: absolute;
+    left: 0;
+    top: 0;
     transform: translateX(0);
+    transition: tranform 0.4s ease-in-out;
 }
 
-img {
-    width: 901px;
-    height: 346px;
+.slide {
+    width: 100vh;
+    text-align: center;
+}
+
+.slide img {
+    object-fit: cover;
+    height: 380px;
+    width: 600px;
+}
+
+.setas {
+    background-color: transparent;
+    border: 0;
+    cursor: pointer;
+    position: absolute;
+    top:30%;
+    transform: translateY(-50%);
+    font-size: 5rem;
+    opacity: 0.8;
+}
+
+.seta-esquerda {
+    left: 2rem;
+}
+
+.seta-direita {
+    right: 2rem;
 }
