--- a/style.css
+++ b/style.css
@@ -30,16 +30,28 @@ body {
     left: 0;
     height: 100%;
     width: 24rem;
-    background-color: var(--blue-color);
     padding: 0.6rem 1.4rem;
+
+    background-color: rgb(58, 7, 94);
+}
+.sideBar .logoContent {
+    margin-bottom: 8rem;
 }
 .sideBar .logoContent .logo {
-    color: var(--white-color);
     display: flex;
     height: 5rem;
+    margin-left: 0.5rem;
     width: 100%;
     align-items: center;
-    gap: 2rem;
+    gap: 0.5rem;
+
+    color: var(--white-color);
+}
+.logoContent .logo img {
+    width: 3rem;
+    height: 3rem;
+    display: flex;
+    align-items: center;
 }
 .logoContent .logo .logoName {
     font-size: 2rem;
@@ -57,15 +69,17 @@ body {
     line-height: 5rem;
 }
 .sideBar ul li a {
-    color: var(--white-color);
     display: flex;
     align-items: center;
     transition: all 0.4s ease;
     border-radius: 1rem;
+
+    color: var(--white-color);
 }
 .sideBar ul li a:hover {
     margin-right: 1rem;
     transition: all 0.4s ease;
+
     color: var(--white-color);
     background-color: #808080;
 }
@@ -86,7 +100,6 @@ body {
 .homeContent {
     position: absolute;
     min-height: 100%;
-    width: calc(100% - 7.8rem);
 }
 .sideBar ~ .homeContent {
     width: calc(100% - 24rem);
@@ -96,16 +109,18 @@ body {
     position: fixed;
     font-size: 1.8rem;
     font-weight: 700;
-    color: white;
     width: 339px;
     height: 70px;
-    background: black;
     border-radius: 12px;
     border: none;
-    margin-top: 68rem;
+    margin-top: 35rem;
     margin-left: 45rem;
     text-transform: uppercase;
     z-index: 10;
+    cursor: pointer;
+
+    color: white;
+    background: rgb(58, 7, 94);
 }
 
 
@@ -119,7 +134,7 @@ body {
     margin: 0 auto;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 0;
+    padding: 2rem;
   }
 
 .galleryCard {
@@ -135,7 +150,8 @@ body {
     flex-direction: column;
     justify-content: space-between;
     border-radius: 3px;
-    background-color: #e1e1e1;
+
+    background-color: rgb(152, 69, 211);
   }
   
   .galleryCardTitle {
@@ -152,25 +168,39 @@ body {
     max-width: 400px;
     transition:width 3s;
     background-size: 90%;
-    color: #FFFFFF;
     text-shadow: 5px 5px 10px black;
-    background-color: #272B30;
     filter: grayscale(0%);
+
+    color: #FFFFFF;
+    background-color: #272B30;
   }
   
   .galleryCardBtn:hover {
-    color: #A0C55F;
     text-shadow: none;
+
+    color: #A0C55F;
   }
 
   .galleryCardBtn {
     padding: 0.6rem 1rem;
     border: none;
-    color: cadetblue;
     font-size: 2rem;
     text-transform: uppercase;
     transition: background-color 1s;
     transition: color 0.6s;
     cursor: pointer;
     text-shadow: none;
+
+    color: cadetblue;
+  }
+
+  .galleryBanner {
+    margin: auto;
+    margin-top: 2rem;
+    width: 90rem;
+    height: 30rem;
+
+    /* background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover; */
   }
