--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
     padding: 0.6rem 1.4rem;
 
     background-color: rgb(58, 7, 94);
+    border: 2px solid black;
 }
 .sideBar .logoContent {
     margin-bottom: 8rem;
@@ -113,7 +114,7 @@ body {
     height: 70px;
     border-radius: 12px;
     border: none;
-    margin-top: 35rem;
+    margin-top: 28rem;
     margin-left: 45rem;
     text-transform: uppercase;
     z-index: 10;
@@ -122,10 +123,6 @@ body {
     color: white;
     background: rgb(58, 7, 94);
 }
-
-
-/* ================================ */
-
 .gallery {
     display: flex;
     align-items: center;
@@ -136,7 +133,6 @@ body {
     justify-content: space-between;
     padding: 2rem;
   }
-
 .galleryCard {
     background-position: center;
     background-repeat: no-repeat;
@@ -153,7 +149,6 @@ body {
 
     background-color: rgb(152, 69, 211);
   }
-  
   .galleryCardTitle {
     font-size: 2rem;
     font-weight: 600;
@@ -162,7 +157,6 @@ body {
     cursor: default;
     text-align: center;
   }
-  
   .galleryCard:hover {
     width: 130%;
     max-width: 400px;
@@ -174,29 +168,26 @@ body {
     color: #FFFFFF;
     background-color: #272B30;
   }
-  
   .galleryCardBtn:hover {
     text-shadow: none;
 
     color: #A0C55F;
   }
-
   .galleryCardBtn {
     padding: 0.6rem 1rem;
     border: none;
     font-size: 2rem;
     text-transform: uppercase;
-    transition: background-color 1s;
+    transition: 1s;
     transition: color 0.6s;
     cursor: pointer;
     text-shadow: none;
 
     color: cadetblue;
   }
-
   .galleryBanner {
     margin: auto;
-    margin-top: 2rem;
+    margin-top: 10rem;
     width: 90rem;
     height: 30rem;
 
@@ -204,3 +195,38 @@ body {
     background-position: center;
     background-size: cover; */
   }
+.headerNav {
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 14rem;
+    cursor: pointer;
+
+    font-size: 1.8rem;
+    color: white;
+    font-weight: 700;
+
+    width: calc(100% - 24rem);
+    height: 8rem;
+    z-index: 100;
+
+    background-color: rgb(58, 7, 94);
+    border: 2px solid black;
+}
+.headerNav a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 12rem;
+
+    text-transform: uppercase;
+}
+.headerNav a:hover {
+    transition: all 0.4s ease;
+    border-radius: 1rem;
+    height: 5rem;
+
+    color: var(--white-color);
+    background-color: #808080;
+}
