--- a/style.css
+++ b/style.css
@@ -114,12 +114,14 @@ body {
     height: 70px;
     border-radius: 12px;
     border: none;
-    margin-top: 28rem;
-    margin-left: 45rem;
+    /*margin-top: 28rem;
+    margin-left: 45rem;*/
     text-transform: uppercase;
     z-index: 10;
     cursor: pointer;
-
+    top: 90%;
+    left: 55%;
+    transform: translate(-50%,-50%);
     color: white;
     background: rgb(58, 7, 94);
 }
