--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
     min-height: 100vh;
     width: 100%;
 
-    background-image: url(img/fundo.jpg);
+    background-color: #2A2E33;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -31,9 +31,9 @@ body {
     height: 100%;
     width: 24rem;
     padding: 0.6rem 1.4rem;
-
-    background-color: rgb(58, 7, 94);
-    border: 2px solid black;
+    border-right: 1px solid rgba(28,28,28,.6);
+    background-color: #272B30;
+    box-shadow: 0 .125rem .25rem rgba(0,0,0,.075)!important;
 }
 .sideBar .logoContent {
     margin-bottom: 8rem;
@@ -122,9 +122,11 @@ body {
     cursor: pointer;
 
     color: white;
-    background: rgb(58, 7, 94);
+    background-color: #272B30;
 }
-
+#carregarMais:hover{
+    background: #7A8288;
+}
 .gallery {
     display: flex;
     align-items: center;
@@ -149,12 +151,13 @@ body {
     justify-content: space-between;
     border-radius: 3px;
 
-    background-color: rgb(152, 69, 211);
+    background-color: #32383E;
   }
   .galleryCardTitle {
     font-size: 2rem;
     font-weight: 600;
     margin-bottom: 1rem;
+      color: #7E8083;
     text-shadow: 5px 5px 10px black;
     cursor: default;
     text-align: center;
@@ -168,7 +171,7 @@ body {
     filter: grayscale(0%);
 
     color: #FFFFFF;
-    background-color: #272B30;
+    background-color: #32383E;
   }
   .galleryCardBtn:hover {
     text-shadow: none;
@@ -193,34 +196,29 @@ body {
     width: 90rem;
     height: 30rem;
 
-    /* background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover; */
+    background-size: cover;
   }
 .headerNav {
     position: fixed;
     display: flex;
     align-items: center;
-    justify-content: center;
-    gap: 14rem;
-    cursor: pointer;
-
+    justify-content: space-around;
+    border-bottom: 1px solid rgba(28,28,28,.6);
     font-size: 1.8rem;
     color: white;
     font-weight: 700;
-
     width: calc(100% - 24rem);
+    left: 24rem;
     height: 8rem;
-    z-index: 100;
-
-    background-color: rgb(58, 7, 94);
-    border: 2px solid black;
+    background-color: #272B30;
+    box-shadow: 0 .125rem .25rem rgba(0,0,0,.075)!important;
 }
 .headerNav a{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 12rem;
+    cursor: pointer;
 
     text-transform: uppercase;
 }
@@ -231,4 +229,7 @@ body {
 
     color: var(--white-color);
     background-color: #808080;
+}
+legend{
+    font-size: 1rem;
 }
