--- a/style.css
+++ b/style.css
@@ -44,7 +44,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 5rem;
     width: 12rem;
+    border-radius: 1rem;
     cursor: pointer;
     text-transform: uppercase;
 }
